--- a/Index.html
+++ b/Index.html
@@ -38,10 +38,11 @@
   </header>
 
   <section class="cep-bar" id="cep-info">
-    <a href="cep.html" id="cep-link">
-      <i class="fas fa-map-marker-alt"></i> Informe seu CEP
-    </a>
-  </section>
+  <a href="cep.html" id="cep-link">
+    <i class="fas fa-map-marker-alt"></i> Informe seu CEP
+  </a>
+</section>
+
 
   <main class="produto-container">
     <section class="info-produto">
@@ -53,17 +54,17 @@
         <span class="total">+10 mil vendidos</span>
       </div>
 
-      <!-- Galeria de imagens estilo Mercado Livre -->
-      <section class="product-gallery">
-        <div class="main-image">
-          <img src="assets/produto-a.jpeg" alt="Galaxy A25" id="mainImage" />
-        </div>
-        <div class="dots-carousel">
-          <div class="dot active" onclick="trocarImagem(0)" role="button"></div>
-          <div class="dot" onclick="trocarImagem(1)" role="button"></div>
-          <div class="dot" onclick="trocarImagem(2)" role="button"></div>
-        </div>
-      </section>
+<!-- Galeria de imagens estilo Mercado Livre -->
+<section class="product-gallery">
+  <div class="main-image">
+    <img src="assets/produto-a.jpeg" alt="Galaxy A25" id="mainImage" />
+  </div>
+  <div class="dots-carousel">
+    <div class="dot active" onclick="trocarImagem(0)" role="button"></div>
+    <div class="dot" onclick="trocarImagem(1)" role="button"></div>
+    <div class="dot" onclick="trocarImagem(2)" role="button"></div>
+  </div>
+</section>
 
       <div class="oferta-dia">OFERTA DO DIA</div>
 
@@ -75,12 +76,11 @@
       <div class="qtde">
         <label for="qtde-select">Quantidade:</label>
         <select id="qtde-select">
-          <option value="1">1 unidade</option>
-          <option value="2">2 unidades</option>
+          <option>1 unidade</option>
+          <option>2 unidades</option>
         </select>
       </div>
-
-      <button class="btn-comprar" onclick="comprar()">Comprar agora</button>
+      <button class="btn-comprar" onclick="window.location.href='checkout.html'">Comprar agora</button>
     </section>
 
     <section class="descricao">
@@ -93,156 +93,140 @@
   </main>
 
   <script>
-    const cep = localStorage.getItem("cep");
-    const cidade = localStorage.getItem("cidade");
+  const cep = localStorage.getItem("cep");
+  const cidade = localStorage.getItem("cidade");
 
-    if (cep && cidade) {
-      const link = document.getElementById("cep-link");
-      link.innerHTML = `<i class="fas fa-map-marker-alt"></i> Entrega para: <strong>${cep}, ${cidade}</strong>`;
-    }
-  </script>
+  if (cep && cidade) {
+    const link = document.getElementById("cep-link");
+    link.innerHTML = `<i class="fas fa-map-marker-alt"></i> Entrega para: <strong>${cep}, ${cidade}</strong>`;
+  }
+</script>
 
+  
   <script>
-    const imagens = [
-      'assets/produto-a.jpeg',
-      'assets/produto-b.jpeg',
-      'assets/produto-c.jpeg'
-    ];
+  const imagens = [
+    'assets/produto-a.jpeg',
+    'assets/produto-b.jpeg',
+    'assets/produto-c.jpeg'
+  ];
 
-    let currentImageIndex = 0;
-    let startX = 0;
+  let currentImageIndex = 0;
+  let startX = 0;
 
-    const mainImage = document.getElementById('mainImage');
-    function trocarImagem(index) {
-      const lightboxImg = document.querySelector('#lightbox img');
+  const mainImage = document.getElementById('mainImage');
+function trocarImagem(index) {
+  const lightboxImg = document.querySelector('#lightbox img');
+  
+  mainImage.classList.remove('fade-in');
+  mainImage.classList.add('fade-out');
 
-      mainImage.classList.remove('fade-in');
-      mainImage.classList.add('fade-out');
+  if (lightboxImg) {
+    lightboxImg.classList.remove('fade-in');
+    lightboxImg.classList.add('fade-out');
+  }
 
-      if (lightboxImg) {
-        lightboxImg.classList.remove('fade-in');
-        lightboxImg.classList.add('fade-out');
-      }
+  setTimeout(() => {
+    mainImage.src = imagens[index];
+    mainImage.onload = () => {
+      mainImage.classList.remove('fade-out');
+      mainImage.classList.add('fade-in');
+    };
 
-      setTimeout(() => {
-        mainImage.src = imagens[index];
-        mainImage.onload = () => {
-          mainImage.classList.remove('fade-out');
-          mainImage.classList.add('fade-in');
-        };
+    if (lightboxImg) {
+      lightboxImg.src = imagens[index];
+      lightboxImg.onload = () => {
+        lightboxImg.classList.remove('fade-out');
+        lightboxImg.classList.add('fade-in');
+      };
+    }
+  }, 100); // dá tempo do fade-out acontecer
+  currentImageIndex = index;
 
-        if (lightboxImg) {
-          lightboxImg.src = imagens[index];
-          lightboxImg.onload = () => {
-            lightboxImg.classList.remove('fade-out');
-            lightboxImg.classList.add('fade-in');
-          };
-        }
-      }, 100); // dá tempo do fade-out acontecer
-      currentImageIndex = index;
+  const dots = document.querySelectorAll('.dot');
+  dots.forEach(dot => dot.classList.remove('active'));
+  if (dots[index]) dots[index].classList.add('active');
+}
+  
 
-      const dots = document.querySelectorAll('.dot');
-      dots.forEach(dot => dot.classList.remove('active'));
-      if (dots[index]) dots[index].classList.add('active');
+  mainImage.addEventListener('touchstart', (e) => {
+    startX = e.touches[0].clientX;
+  });
+
+  mainImage.addEventListener('touchend', (e) => {
+    const endX = e.changedTouches[0].clientX;
+    handleSwipe(startX, endX);
+  });
+
+  mainImage.addEventListener('mousedown', (e) => {
+    startX = e.clientX;
+  });
+
+  mainImage.addEventListener('mouseup', (e) => {
+    const endX = e.clientX;
+    handleSwipe(startX, endX);
+  });
+
+  function handleSwipe(start, end) {
+    const deltaX = start - end;
+    if (Math.abs(deltaX) < 50) return;
+
+    if (deltaX > 0) {
+      currentImageIndex = (currentImageIndex + 1) % imagens.length;
+    } else {
+      currentImageIndex = (currentImageIndex - 1 + imagens.length) % imagens.length;
     }
 
-    mainImage.addEventListener('touchstart', (e) => {
+    trocarImagem(currentImageIndex);
+  }
+
+  // Lightbox
+  mainImage.addEventListener('click', function () {
+    const lightbox = document.createElement('div');
+    lightbox.id = 'lightbox';
+    lightbox.style.position = 'fixed';
+    lightbox.style.top = 0;
+    lightbox.style.left = 0;
+    lightbox.style.width = '100vw';
+    lightbox.style.height = '100vh';
+    lightbox.style.background = 'rgba(0,0,0,0.8)';
+    lightbox.style.display = 'flex';
+    lightbox.style.justifyContent = 'center';
+    lightbox.style.alignItems = 'center';
+    lightbox.style.zIndex = 1000;
+
+    const img = document.createElement('img');
+    img.src = imagens[currentImageIndex];
+    img.style.maxWidth = '90%';
+    img.style.maxHeight = '90%';
+    img.style.borderRadius = '10px';
+    img.style.transition = 'opacity 0.3s ease-in-out';
+    img.style.opacity = 1;
+
+    lightbox.appendChild(img);
+    document.body.appendChild(lightbox);
+
+    img.addEventListener('touchstart', (e) => {
       startX = e.touches[0].clientX;
     });
-
-    mainImage.addEventListener('touchend', (e) => {
+    img.addEventListener('touchend', (e) => {
       const endX = e.changedTouches[0].clientX;
       handleSwipe(startX, endX);
     });
 
-    mainImage.addEventListener('mousedown', (e) => {
+    img.addEventListener('mousedown', (e) => {
       startX = e.clientX;
     });
-
-    mainImage.addEventListener('mouseup', (e) => {
+    img.addEventListener('mouseup', (e) => {
       const endX = e.clientX;
       handleSwipe(startX, endX);
     });
 
-    function handleSwipe(start, end) {
-      const deltaX = start - end;
-      if (Math.abs(deltaX) < 50) return;
-
-      if (deltaX > 0) {
-        currentImageIndex = (currentImageIndex + 1) % imagens.length;
-      } else {
-        currentImageIndex = (currentImageIndex - 1 + imagens.length) % imagens.length;
-      }
-
-      trocarImagem(currentImageIndex);
-    }
-
-    // Lightbox
-    mainImage.addEventListener('click', function () {
-      const lightbox = document.createElement('div');
-      lightbox.id = 'lightbox';
-      lightbox.style.position = 'fixed';
-      lightbox.style.top = 0;
-      lightbox.style.left = 0;
-      lightbox.style.width = '100vw';
-      lightbox.style.height = '100vh';
-      lightbox.style.background = 'rgba(0,0,0,0.8)';
-      lightbox.style.display = 'flex';
-      lightbox.style.justifyContent = 'center';
-      lightbox.style.alignItems = 'center';
-      lightbox.style.zIndex = 1000;
-
-      const img = document.createElement('img');
-      img.src = imagens[currentImageIndex];
-      img.style.maxWidth = '90%';
-      img.style.maxHeight = '90%';
-      img.style.borderRadius = '10px';
-      img.style.transition = 'opacity 0.3s ease-in-out';
-      img.style.opacity = 1;
-
-      lightbox.appendChild(img);
-      document.body.appendChild(lightbox);
-
-      img.addEventListener('touchstart', (e) => {
-        startX = e.touches[0].clientX;
-      });
-      img.addEventListener('touchend', (e) => {
-        const endX = e.changedTouches[0].clientX;
-        handleSwipe(startX, endX);
-      });
-
-      img.addEventListener('mousedown', (e) => {
-        startX = e.clientX;
-      });
-      img.addEventListener('mouseup', (e) => {
-        const endX = e.clientX;
-        handleSwipe(startX, endX);
-      });
-
-      lightbox.addEventListener('click', () => {
-        document.body.removeChild(lightbox);
-      });
+    lightbox.addEventListener('click', () => {
+      document.body.removeChild(lightbox);
     });
-  </script>
+  });
+</script>
 
-  <script>
-    function comprar() {
-      const precoTexto = document.querySelector(".preco").textContent.trim(); // Ex: R$ 1.999,00
-      const quantidadeSelect = document.getElementById("qtde-select");
-      const quantidade = parseInt(quantidadeSelect.value) || 1;
-
-      // Extrai número do preço
-      const precoNumero = parseFloat(precoTexto.replace("R$", "").replace(".", "").replace(",", "."));
-
-      const valorTotal = precoNumero * quantidade;
-
-      // Salva no localStorage
-      localStorage.setItem("valorTotal", valorTotal.toFixed(2));
-      localStorage.setItem("quantidade", quantidade);
-
-      window.location.href = "checkout.html";
-    }
-  </script>
 
 </body>
 </html>
