--- a/Index.html
+++ b/Index.html
@@ -1,139 +1,232 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mercado Livre</title>
-  <link rel="stylesheet" href="style.css" />
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    integrity="sha512-pY1hkyWyh8qD5QuMVw3N7e4+iwWPOq7GhzRHnJ5Oqf3StRMP6+2PjF6Ln5eV0sB8ic6P5j+NcW6IQYqW0h3pKw=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mercado Livre</title>
+  <link rel="icon" href="assets/logo.png" />
+  <link rel="stylesheet" href="style.css" />
+  <!-- FontAwesome para ícones -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-pVf8OfzHCp72/YbXCNcA9wIYkKZcu/tz/0v+ZosIm0x+TI/zWmOH6Gswb3IoNz5z2Ep+XNV7B+54ep2H+z+D0w=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+  <!-- Meta Open Graph para redes sociais -->
+  <meta property="og:title" content="Mercado Livre - Os melhores produtos, com o melhor preço!" />
+  <meta property="og:description" content="Confira já o Samsung Galaxy A25 5G e outras ofertas imperdíveis." />
+  <meta property="og:image" content="https://mercad.netlify.app/assets/logo.png" />
+  <meta property="og:url" content="https://mercad.netlify.app/" />
+  <meta property="og:type" content="website" />
+  <!-- Meta Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Mercado Livre - Os melhores produtos, com o melhor preço!" />
+  <meta name="twitter:description" content="Veja o Samsung Galaxy A25 5G e muito mais em LibreMerc!" />
+  <meta name="twitter:image" content="https://mercad.netlify.app/assets/logo.png" />
 </head>
+
 <body>
-  <!-- HEADER -->
-  <header>
-    <img class="logo" src="assets/logo.png" alt="Logo LibreMerc" />
-    <div class="header-center">
-      <input
-        type="search"
-        class="busca-input"
-        placeholder="Estou buscando..."
-        aria-label="Busca"
-      />
-    </div>
-    <i class="fas fa-shopping-cart cart-icon" aria-label="Carrinho"></i>
-  </header>
+  <header>
+    <img src="assets/logo.png" alt="Logo LibreMerc" class="logo" />
+    <div class="header-center">
+      <input type="search" class="busca-input" placeholder="Estou buscando..." />
+      <i class="fas fa-bars menu-icon"></i>
+      <i class="fas fa-shopping-cart cart-icon"></i>
+    </div>
+  </header>
 
-  <!-- FAIXA CEP -->
-  <div class="cep-bar">
-    <a href="cep.html" class="btn-cep">
-      <i class="fas fa-map-marker-alt"></i> Informe seu CEP
-    </a>
-  </div>
+  <section class="cep-bar" id="cep-info">
+  <a href="cep.html" id="cep-link">
+    <i class="fas fa-map-marker-alt"></i> Informe seu CEP
+  </a>
+</section>
 
-  <!-- CONTAINER PRODUTO -->
-  <section class="produto-container">
-    <div class="info-produto">
-      <span class="tag-mais-vendido">Mais vendido</span>
-      <span class="categoria">Celulares e Smartphones</span>
-      <h1>Samsung Galaxy A25 128GB</h1>
-      <div class="avaliacao" aria-label="Avaliação 4.5 estrelas">
-        <div class="estrelas">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star-half-alt"></i>
-        </div>
-        <span class="total">(345 avaliações)</span>
-      </div>
 
-      <div class="product-gallery" aria-label="Galeria de imagens do produto">
-        <div class="main-image">
-          <img
-            id="mainImage"
-            src="assets/galaxy-a25-1.jpg"
-            alt="Samsung Galaxy A25 - vista principal"
-          />
-        </div>
-        <div class="dots-carousel" role="list">
-          <span
-            class="dot active"
-            role="listitem"
-            aria-label="Imagem 1"
-            data-img="assets/galaxy-a25-1.jpg"
-          ></span>
-          <span
-            class="dot"
-            role="listitem"
-            aria-label="Imagem 2"
-            data-img="assets/galaxy-a25-2.jpg"
-          ></span>
-          <span
-            class="dot"
-            role="listitem"
-            aria-label="Imagem 3"
-            data-img="assets/galaxy-a25-3.jpg"
-          ></span>
-        </div>
-      </div>
+  <main class="produto-container">
+    <section class="info-produto">
+      <div class="tag-mais-vendido">MAIS VENDIDO</div>
+      <div class="categoria">5° em Celulares e Smartphones</div>
+      <h1>Samsung Galaxy A25 5G Dual SIM 128GB Azul Escuro 6GB Ram</h1>
+      <div class="avaliacao">
+        <span class="estrelas">★★★★★</span>
+        <span class="total">+10 mil vendidos</span>
+      </div>
 
-      <div class="oferta-dia">Oferta do dia</div>
-      <div class="preco">R$ 1.499,00</div>
-      <div class="parcelas">ou 10x de R$ 149,90 sem juros</div>
+<!-- Galeria de imagens estilo Mercado Livre -->
+<section class="product-gallery">
+  <div class="main-image">
+    <img src="assets/produto-a.jpeg" alt="Galaxy A25" id="mainImage" />
+  </div>
+  <div class="dots-carousel">
+    <div class="dot active" onclick="trocarImagem(0)" role="button"></div>
+    <div class="dot" onclick="trocarImagem(1)" role="button"></div>
+    <div class="dot" onclick="trocarImagem(2)" role="button"></div>
+  </div>
+</section>
 
-      <div class="qtde">
-        <label for="qtde-select">Quantidade:</label>
-        <select id="qtde-select" name="qtde">
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-        </select>
-      </div>
+      <div class="oferta-dia">OFERTA DO DIA</div>
 
-      <button class="btn-comprar">Comprar</button>
+      <div class="preco-detalhe">
+        <span class="preco">R$ 1.999,00</span>
+        <small class="parcelas">em até 12x de R$ 166,59 sem juros</small>
+      </div>
 
-      <div class="descricao">
-        <h2>Descrição do produto</h2>
-        <p>
-          O Samsung Galaxy A25 oferece uma experiência incrível com sua tela
-          AMOLED, câmera de alta resolução e bateria de longa duração para você
-          aproveitar ao máximo.
-        </p>
-      </div>
-    </div>
-  </section>
+      <div class="qtde">
+        <label for="qtde-select">Quantidade:</label>
+        <select id="qtde-select">
+          <option>1 unidade</option>
+          <option>2 unidades</option>
+        </select>
+      </div>
+      <button class="btn-comprar" onclick="window.location.href='checkout.html'">Comprar agora</button>
+    </section>
 
-  <script>
-    // Script para trocar imagem principal ao clicar nas bolinhas
-    const dots = document.querySelectorAll(".dot");
-    const mainImage = document.getElementById("mainImage");
+    <section class="descricao">
+      <h2>Descrição do produto</h2>
+      <p>
+        Smartphone Samsung Galaxy A25 5G com 128 GB de armazenamento, 6 GB de RAM, suporte a dual SIM. Tela 6,5' Full HD+, câmera traseira de 50 MP e frontal de 13 MP, bateria de 5 000 mAh. Garantia de 12 meses contra defeitos de fabricação.
+      </p>
+      <p>Inclui carregador rápido, cabo USB-C e capa protetora.</p>
+    </section>
+  </main>
 
-    dots.forEach((dot) => {
-      dot.addEventListener("click", () => {
-        // Remove active de todas
-        dots.forEach((d) => d.classList.remove("active"));
-        // Adiciona active na clicada
-        dot.classList.add("active");
+  <script>
+  const cep = localStorage.getItem("cep");
+  const cidade = localStorage.getItem("cidade");
 
-        // Troca imagem principal
-        const newSrc = dot.getAttribute("data-img");
-        mainImage.classList.add("fade-out");
-        setTimeout(() => {
-          mainImage.src = newSrc;
-          mainImage.classList.remove("fade-out");
-          mainImage.classList.add("fade-in");
-        }, 200);
-        setTimeout(() => {
-          mainImage.classList.remove("fade-in");
-        }, 600);
-      });
-    });
-  </script>
+  if (cep && cidade) {
+    const link = document.getElementById("cep-link");
+    link.innerHTML = `<i class="fas fa-map-marker-alt"></i> Entrega para: <strong>${cep}, ${cidade}</strong>`;
+  }
+</script>
+
+  
+  <script>
+  const imagens = [
+    'assets/produto-a.jpeg',
+    'assets/produto-b.jpeg',
+    'assets/produto-c.jpeg'
+  ];
+
+  let currentImageIndex = 0;
+  let startX = 0;
+
+  const mainImage = document.getElementById('mainImage');
+function trocarImagem(index) {
+  const lightboxImg = document.querySelector('#lightbox img');
+  
+  mainImage.classList.remove('fade-in');
+  mainImage.classList.add('fade-out');
+
+  if (lightboxImg) {
+    lightboxImg.classList.remove('fade-in');
+    lightboxImg.classList.add('fade-out');
+  }
+
+  setTimeout(() => {
+    mainImage.src = imagens[index];
+    mainImage.onload = () => {
+      mainImage.classList.remove('fade-out');
+      mainImage.classList.add('fade-in');
+    };
+
+    if (lightboxImg) {
+      lightboxImg.src = imagens[index];
+      lightboxImg.onload = () => {
+        lightboxImg.classList.remove('fade-out');
+        lightboxImg.classList.add('fade-in');
+      };
+    }
+  }, 100); // dá tempo do fade-out acontecer
+  currentImageIndex = index;
+
+  const dots = document.querySelectorAll('.dot');
+  dots.forEach(dot => dot.classList.remove('active'));
+  if (dots[index]) dots[index].classList.add('active');
+}
+  
+
+  mainImage.addEventListener('touchstart', (e) => {
+    startX = e.touches[0].clientX;
+  });
+
+  mainImage.addEventListener('touchend', (e) => {
+    const endX = e.changedTouches[0].clientX;
+    handleSwipe(startX, endX);
+  });
+
+  mainImage.addEventListener('mousedown', (e) => {
+    startX = e.clientX;
+  });
+
+  mainImage.addEventListener('mouseup', (e) => {
+    const endX = e.clientX;
+    handleSwipe(startX, endX);
+  });
+
+  function handleSwipe(start, end) {
+    const deltaX = start - end;
+    if (Math.abs(deltaX) < 50) return;
+
+    if (deltaX > 0) {
+      currentImageIndex = (currentImageIndex + 1) % imagens.length;
+    } else {
+      currentImageIndex = (currentImageIndex - 1 + imagens.length) % imagens.length;
+    }
+
+    trocarImagem(currentImageIndex);
+  }
+
+  // Lightbox
+  mainImage.addEventListener('click', function () {
+    const lightbox = document.createElement('div');
+    lightbox.id = 'lightbox';
+    lightbox.style.position = 'fixed';
+    lightbox.style.top = 0;
+    lightbox.style.left = 0;
+    lightbox.style.width = '100vw';
+    lightbox.style.height = '100vh';
+    lightbox.style.background = 'rgba(0,0,0,0.8)';
+    lightbox.style.display = 'flex';
+    lightbox.style.justifyContent = 'center';
+    lightbox.style.alignItems = 'center';
+    lightbox.style.zIndex = 1000;
+
+    const img = document.createElement('img');
+    img.src = imagens[currentImageIndex];
+    img.style.maxWidth = '90%';
+    img.style.maxHeight = '90%';
+    img.style.borderRadius = '10px';
+    img.style.transition = 'opacity 0.3s ease-in-out';
+    img.style.opacity = 1;
+
+    lightbox.appendChild(img);
+    document.body.appendChild(lightbox);
+
+    img.addEventListener('touchstart', (e) => {
+      startX = e.touches[0].clientX;
+    });
+    img.addEventListener('touchend', (e) => {
+      const endX = e.changedTouches[0].clientX;
+      handleSwipe(startX, endX);
+    });
+
+    img.addEventListener('mousedown', (e) => {
+      startX = e.clientX;
+    });
+    img.addEventListener('mouseup', (e) => {
+      const endX = e.clientX;
+      handleSwipe(startX, endX);
+    });
+
+    lightbox.addEventListener('click', () => {
+      document.body.removeChild(lightbox);
+    });
+  });
+</script>
+
+
 </body>
 </html>
