--- a/index.html
+++ b/index.html
@@ -28,19 +28,24 @@
 </head>
 
 <body>
-  <header>
-    <img src="assets/logo.png" alt="Logo LibreMerc" class="logo" />
-    <div class="header-center">
-      <input type="search" class="busca-input" placeholder="Estou buscando..." />
-      <i class="fas fa-bars menu-icon"></i>
-      <i class="fas fa-shopping-cart cart-icon"></i>
-    </div>
-  </header>
+  <!-- TOPO FIXADO -->
+<header>
+  <img src="assets/logo.png" alt="Logo LibreMerc" class="logo" />
+  
+  <div class="header-center">
+    <input type="search" class="busca-input" placeholder="Estou buscando..." />
+  </div>
+  
+  <i class="fas fa-shopping-cart cart-icon"></i>
+</header>
 
-  <section class="cep-bar" id="cep-info">
-  <a href="cep.html" id="cep-link">
-    <i class="fas fa-map-marker-alt"></i> Informe seu CEP
-  </a>
+<!-- FAIXA DO CEP -->
+<div class="cep-bar" id="cep-info">
+  <a href="cep.html" id="cep-link">
+    <i class="fas fa-map-marker-alt"></i>
+    Informe seu CEP
+  </a>
+</div>
 </section>
 
 
